[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccstoolkit"
version = "0.2.0"
description = "A toolkit for studying the reactive phase behavior of scCO2 streams and steel corrosion."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
author = "Boyan Peychev"
author-email = "bpeychev@ipc.bas.bg"
dependencies = [
    "numpy>=1.21.5,<1.26",
    "matplotlib>=3.5,<3.11",
    "tabulate>=0.9.0,<1.0",
    "scipy>=1.17.1; python_version >= '3.11'",
	"scipy>=1.15.0,<1.17.2; python_version < '3.11'" #works with Python 3.7–3.10?
]

[project.urls]
Homepage = "https://github.com/bipeychev/ccstoolkit"

[tool.setuptools.packages.find]
where = ['.']

[tool.ruff.lint]
ignore = ["E731"]
